--- a/10장_객체 리터럴.md
+++ b/10장_객체 리터럴.md
@@ -1,3 +1,111 @@
 # 객체란?
 
-다양한 타입의 값을 하나의 단위로 구성한 복합적인 자료구조
+객체 타입이란 다양한 타입의 값을 하나의 단위로 구성한 복합적인 자료구조이다.
+객체는 0개 이상의 프로퍼티로 구성된 집합을 의미
+프로퍼티가 함수일 경우 메서드라 호칭
+
+프로퍼티 : 객체의 상태를 나타내는 값
+메서드 : 프로퍼티를 참조하고 조작할 수 있는 동작
+
+```
+var person= {
+ name : 'lee';
+ age : 20;
+}
+```
+
+## 자바스크립트의 객체 생성 방법
+- 객체 리터럴
+- Object 생성자 함수
+- 생성자 함수
+- Object.create 메서드
+- 클래스(ES6)
+
+### 객체 리터럴
+사람이 이해할 수 있는 문자 또는 약속된 기호를 사용하여 값을 생성하는 표기법
+
+
+## 프로퍼티
+```
+var person = {
+  name : 'Lee',
+  age : 20,
+};
+```
+
+식별자 네이밍 규칙을 따라서 따옴표 사용을 결정하자
+```
+var person = {
+  firstName : 'Ung-mo', // 식별자 네이밍 규칙을 준수
+  'last-name' : 'lee'  // last 와 name 사이, 따옴표가 없을 경우 Syntax에러 발생
+};
+```
+
+## 메서드
+객체에 묶여있는 함수를 의미
+```
+var circle = {
+  radius : 5,
+  getDiameter : function (){
+    return 2* this.radius;
+  }
+ };
+
+```
+
+## 프로퍼티 접근
+접근법
+- 마침표 표기법
+- 대괄호 표기법 : 반드시 프로퍼티 키는 따옴표로 감싼 문자열 이어야 한다.
+
+```
+var person = {
+  name : 'Lee'
+};
+// 마침표에 의한 접근
+console.log(person.name);
+
+// 대괄호에 의한 접근
+console.log(person['name'];
+
+```
+
+## 프로퍼티 값 갱신
+
+```
+var person = {
+  name : 'Lee'
+  };
+  
+  person.name = 'Kim';
+  console.log(person); // {name : 'Kim'}
+  ```
+  
+  ## 프로퍼티 동적 생성
+  존재하지 않는 프로퍼티에 값을 할당 시 프로퍼티가 동적으로 생성되어 추가된다.
+  
+  ```
+  var person = {
+    name : 'Lee'
+  };
+  
+  person.age = 20;
+  
+  ```
+  
+  ## 프로퍼티 삭제
+  delete 연산자를 사용하여 프로퍼티 삭제
+  ```
+  delete person.age;
+  ```
+  
+  ## ES6 에서 추가된 객체 리터럴의 확장 기능
+  ```
+  var x = 1, y = 2;
+  
+  var obj = {
+    x : x;
+    y : y;
+  };
+  ```
+  
