--- a/10장_객체 리터럴.md
+++ b/10장_객체 리터럴.md
@@ -109,3 +109,27 @@ var person = {
   };
   ```
   
+  ```
+  var x = 1, y = 2;
+  var obj = { x, y }
+  ```
+  
+  function 생략 가능
+  ```
+  var obj = {
+    name : 'Lee',
+    sayHi : function() {
+    console.log('Hi'+ this.name);
+    }
+  };
+  ```
+  ```
+  var obj = {
+    name : 'Lee',
+    sayHi() {
+    console.log('Hi'+ this.name);
+    }
+  };
+  ```
+  
+  
